# pylearn

./: helloworld.py  remark.md
ai_model_manager/: gradio_app.py  main.py  models_export.csv  pyproject.toml
ai_model_manager/.gradio/flagged/: dataset1.csv
ai_model_manager/app/config/: database.py  settings.py
ai_model_manager/app/model/: model_dto.py  model_entity.py
ai_model_manager/app/repository/: model_repository.py
ai_model_manager/app/router/: chat_router.py  chat_router_func.py  get_weather.py  model_router.py
ai_model_manager/app/service/: model_service.py
aiohttp/: aiohttp_demo1.py  aiohttp_demo2.py  aiohttp_demo3.py
asyncio/: demo1.py  demo2.py
numpy/: demo1.py
python grammar/: javaDto.txt  javaService.txt  javaToPy.py  tempCodeRunnerFile.py  type hints.py  yield_learn.py
