[project]
name = "ai-model-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "asyncmy>=0.2.11",
    "fastapi>=0.136.0",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
